--- a/manual/templates/manual/section_list.html
+++ b/manual/templates/manual/section_list.html
@@ -27,7 +27,7 @@
                     <div class="accordion-body">
                         <p>{{ section.description|safe }}</p>
                         <ul class="list-group">
-                            {% for subsection in section.subsections.all|dictsort:"title" %}
+                            {% for subsection in section.subsections %}
                                 <a href="{% url 'section_detail' subsection.section.id %}#subsection-{{ subsection.id }}">{{ subsection.title }}</a>
                             {% endfor %}
                         </ul>
